.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v4/floatingEffect_disabledWildcard.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/floatingEffect_disabledWildcard.ts(3,1): error TS377001: This Effect value is neither yielded nor used in an assignment. effect(floatingEffect)
/.src/floatingEffect_disabledWildcard.ts(10,1): error TS377001: This Effect value is neither yielded nor used in an assignment. effect(floatingEffect)


==== /.src/floatingEffect_disabledWildcard.ts (2 errors) ====
    import { Effect } from "effect"
    
    Effect.succeed(1)
    ~~~~~~~~~~~~~~~~~
!!! error TS377001: This Effect value is neither yielded nor used in an assignment. effect(floatingEffect)
    
    /** @effect-diagnostics *:off */
    
    Effect.succeed(1)
    
    /** @effect-diagnostics floatingEffect:error */
    Effect.succeed(1)
    ~~~~~~~~~~~~~~~~~
!!! error TS377001: This Effect value is neither yielded nor used in an assignment. effect(floatingEffect)
    
    /** @effect-diagnostics *:off */
    Effect.succeed(1)
    
